--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "client-install": "cd client && npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "cd server && nodemon server.js",
+    "server": "cd server && nodemon server.js",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
