--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "Eghizio",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.20"
+    "mongoose": "^5.4.20",
+    "puppeteer": "^1.14.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
